Fix: images and text wrapping bugs

--- a/Fresh.nnwtheme/stylesheet.css
+++ b/Fresh.nnwtheme/stylesheet.css
@@ -45,6 +45,8 @@ body {
     max-width: 48em;
     margin: 0 auto;
     padding: 1.5em;
+    overflow-wrap: anywhere;
+    word-break: break-word;
 }
 
 .flow>*+* {
@@ -138,6 +140,7 @@ body {
     position: relative;
     display: block;
     font-family: TheChelsMedium, -system-ui, "Gill Sans", sans-serif
+    ;text-wrap: balance;
 }
 
 
@@ -167,7 +170,9 @@ ul li {
 }
 
 p {
-    line-height: 1.4
+    line-height: 1.4;
+    overflow-wrap: anywhere;
+    word-break: break-word;
 }
 
 strong,
@@ -250,8 +255,10 @@ cite {
 img {
     display: block;
     max-width: 100%;
+    width: 100%;
     height: auto;
-    border: 1px solid var(--primary)
+    border: 1px solid var(--primary);
+    box-sizing: border-box;
 }
 
 table {
