--- a/thechelsuk.nnwtheme/stylesheet.css
+++ b/thechelsuk.nnwtheme/stylesheet.css
@@ -74,6 +74,8 @@ body {
     max-width: 48em;
     margin: 0 auto;
     padding: 1.5em;
+    overflow-wrap: anywhere;
+    word-break: break-word;
 }
 
 .flow>*+* {
@@ -167,6 +169,7 @@ body {
     position: relative;
     display: block;
     font-family: TheChelsMedium, -system-ui, "Gill Sans", sans-serif
+    ;text-wrap: balance;
 }
 
 
@@ -196,7 +199,9 @@ ul li {
 }
 
 p {
-    line-height: 1.4
+    line-height: 1.4;
+    overflow-wrap: anywhere;
+    word-break: break-word;
 }
 
 strong,
@@ -279,8 +284,10 @@ cite {
 img {
     display: block;
     max-width: 100%;
+    width: 100%;
     height: auto;
-    border: 1px solid var(--primary)
+    border: 1px solid var(--primary);
+    box-sizing: border-box;
 }
 
 table {
